default/objects/RM_Org_Setting__c/fields/Auto_Layout__c.field-meta.xml
<CustomField>
    <fullName>Auto_Layout__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to have the Relationship Map automatically layout the nodes. Uncheck to do this manually.</description>
    <inlineHelpText>Check this to have the Relationship Map automatically layout the nodes. Uncheck to do this manually.</inlineHelpText>
    <label>Auto Layout</label>
    <type>Checkbox</type>
</CustomField>