default/objects/RM_Org_Setting__c/fields/Create_New_Account__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create New Account</label>
    <type>Checkbox</type>
</CustomField>