default/objects/RM_Org_Setting__c/fields/Create_New_Contact__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create New Contact</label>
    <type>Checkbox</type>
</CustomField>