default/objects/RM_Org_Setting__c/fields/Display_Style__c.field-meta.xml
<CustomField>
    <fullName>Display_Style__c</fullName>
    <description>Select the chart display styles. For charts that are wide, choose the last parents arranging children vertically.</description>
    <inlineHelpText>Select the chart display styles. For charts that are wide, choose the last parents arranging children vertically.</inlineHelpText>
    <label>Display Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Horizontal</fullName>
                <default>true</default>
                <label>Horizontal</label>
            </value>
            <value>
                <fullName>Leaf_Vertical</fullName>
                <label>Vertical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>