default/objects/RM_Org_Setting__c/fields/Enable_Contact_Context_Menu__c.field-meta.xml
<CustomField>
    <fullName>Enable_Contact_Context_Menu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to show and let users click on Contact to view the Salesforce contact modal</description>
    <inlineHelpText>Check this to show and let users click on Contact to view the Salesforce contact modal</inlineHelpText>
    <label>Enable Contact Context Menu</label>
    <type>Checkbox</type>
</CustomField>