default/objects/RM_Org_Setting__c/fields/Enable_Group_Selection_Context_Menu__c.field-meta.xml
<CustomField>
    <fullName>Enable_Group_Selection_Context_Menu__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag for the abilty to create and adjust groups in the Relationship Map</description>
    <inlineHelpText>Check this to allow creating deleting and editing groups in Relationship Maps</inlineHelpText>
    <label>Enable Grouping</label>
    <type>Checkbox</type>
</CustomField>