default/objects/RM_Org_Setting__c/fields/Enable_Map_Member_Context_Menu__c.field-meta.xml
<CustomField>
    <fullName>Enable_Map_Member_Context_Menu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to enable the context menu for Map Members or Key Stakeholder in the Relationship Map</description>
    <inlineHelpText>Check this to enable the context menu for Map Members or Key Stakeholder in the Relationship Map</inlineHelpText>
    <label>Enable Map Member Context Menu</label>
    <type>Checkbox</type>
</CustomField>