default/objects/RM_Org_Setting__c/fields/Enable_Sugg_Con_For_RMSettings__c.field-meta.xml
<CustomField>
    <fullName>Enable_Sugg_Con_For_RMSettings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to allow users to see suggested contacts for the relationship map settings.</description>
    <inlineHelpText>Check this box to allow users to see suggested contacts for the relationship map settings.</inlineHelpText>
    <label>Enable Suggested Contacts For RMSetting</label>
    <type>Checkbox</type>
</CustomField>