default/objects/RM_Org_Setting__c/fields/Enable_Suggested_Contacts_For_RM__c.field-meta.xml
<CustomField>
    <fullName>Enable_Suggested_Contacts_For_RM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to allow users to see suggested contacts for the relationship map.</description>
    <inlineHelpText>Check this box to allow users to see suggested contacts for the relationship map.</inlineHelpText>
    <label>Enable Suggested Contacts For RM</label>
    <type>Checkbox</type>
</CustomField>