default/objects/RM_Org_Setting__c/fields/Is_Badge_Global_Scope__c.field-meta.xml
<CustomField>
    <fullName>Is_Badge_Global_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to associate a badge with the contact regardless of which map the contact is on</description>
    <inlineHelpText>Check to associate a badge with the contact regardless of which map the contact is on.</inlineHelpText>
    <label>Is Badge Global Scope</label>
    <type>Checkbox</type>
</CustomField>