default/objects/RM_Org_Setting__c/fields/Is_Influence_Support_Global_Scope__c.field-meta.xml
<CustomField>
    <fullName>Is_Influence_Support_Global_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Influence Support Global Scope</label>
    <type>Checkbox</type>
</CustomField>