default/objects/RM_Org_Setting__c/fields/Is_Reports_To_Global_Scope__c.field-meta.xml
<CustomField>
    <fullName>Is_Reports_To_Global_Scope__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Reports To Global Scope</label>
    <type>Checkbox</type>
</CustomField>