default/objects/RM_Org_Setting__c/fields/Lead_Tab__c.field-meta.xml
<CustomField>
    <fullName>Lead_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lead Tab</label>
    <type>Checkbox</type>
</CustomField>