default/objects/RM_Org_Setting__c/fields/Prolifiq_Extended_Tools_URL__c.field-meta.xml
<CustomField>
    <fullName>Prolifiq_Extended_Tools_URL__c</fullName>
    <description>External URL for extended features.</description>
    <inlineHelpText>External URL for extended features.</inlineHelpText>
    <label>Prolifiq Extended Tools URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>