default/objects/RM_Org_Setting__c/fields/Relationship_Line_Opacity__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Line_Opacity__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The opacity of the custom relationship lines.  Set a percentage value between 0% to make the lines hidden and 100% for full visibility.</description>
    <inlineHelpText>The opacity of the custom relationship lines.  Set a percentage value between 0% to make the lines hidden and 100% for full visibility.</inlineHelpText>
    <label>Relationship Line Opacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>