default/objects/RM_Org_Setting__c/fields/rm_contact_limit__c.field-meta.xml
<CustomField>
    <fullName>rm_contact_limit__c</fullName>
    <label>rm contact limit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <default>true</default>
                <label>10</label>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>