default/objects/RM_Org_Setting__c/fields/Show_Auto_Manual_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Show_Auto_Manual_Toggle__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Auto Manual Toggle</label>
    <type>Checkbox</type>
</CustomField>