default/objects/RM_Org_Setting__c/fields/Show_Chart_Settings__c.field-meta.xml
<CustomField>
    <fullName>Show_Chart_Settings__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked then the settings button in the dropdown menu of key stakeholder/relationship maps will show based on user permissions.  If unchecked this will hide the button regardless of any permissions for users to see the settings button.</description>
    <inlineHelpText>If this is unchecked then no users in the org will see the settings button in the key stakeholder/relationship map dropdown menu regardless of what permissions they have set for showing the button.  This is org wide.</inlineHelpText>
    <label>Show Chart Settings</label>
    <type>Checkbox</type>
</CustomField>