default/objects/RM_Org_Setting__c/fields/Show_Overview__c.field-meta.xml
<CustomField>
    <fullName>Show_Overview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to display an overview that users can pan around to see the whole relationship map</description>
    <inlineHelpText>Check this to display an overview that users can pan around to see the whole relationship map</inlineHelpText>
    <label>Show Overview</label>
    <type>Checkbox</type>
</CustomField>