default/objects/RM_Org_Setting__c/fields/Use_OmniViewer_For_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Use_OmniViewer_For_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to use the OmniViewer for Contact details in the Relationship Map</description>
    <inlineHelpText>Check this to use the OmniViewer for Contact details in the Relationship Map</inlineHelpText>
    <label>Use OmniViewer for Contacts</label>
    <type>Checkbox</type>
</CustomField>