default/objects/RM_Org_Setting__c/fields/User_Tab__c.field-meta.xml
<CustomField>
    <fullName>User_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <label>User Tab</label>
    <type>Checkbox</type>
</CustomField>